fix(ui): SummaryItem - fix delta alignment

--- a/packages/ui/src/components/summary-item/summary-item.module.css
+++ b/packages/ui/src/components/summary-item/summary-item.module.css
@@ -30,7 +30,7 @@
   min-height: var(--space-xsmall);
   font-size: var(--size-small);
   line-height: var(--space-xsmall);
-  text-align: left;
+  text-align: inherit;
 }
 
 .helpButton {
